fixed alignment

--- a/client/src/components/main-page/main-page.scss
+++ b/client/src/components/main-page/main-page.scss
@@ -32,20 +32,26 @@ body {
 .stock-track-logo {
 	@extend .account-img;
 	transition: none;
-	width: clamp(1em, 16vw, 16vw);
-	height: clamp(1em, 16vw, 16vw);
+	width: clamp(1em, 10vw, 16vw);
+	height: clamp(1em, 22vh, 20vh);
+	margin: 0 1em 0 0;
 }
 
-#wrapper {
+#header-wrapper {
 	display: flex;
 	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: space-around;
+	justify-content: center;
+	align-items: center;
 	#header {
 		color: var(--font-colour);
 		font-size: clamp(2rem, 8vw, 6rem);
-		flex-grow: 5;
 	}
+}
+
+#content-wrapper {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 	#search-bar {
 		background-color: var(--search-bar-bg);
 		padding: 0.5rem;
